added hover feature

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         button{
             
             margin-top: 0.5rem;
-            color:yellow;     
+            color:black;     
             border-radius: 28px;     
             font-size: x-large;
             margin-bottom: 5rem;
@@ -43,8 +43,20 @@
             border: none;
             height:5vh;
             font-weight: bold;
+            cursor: pointer;
+          
+
 
         }
+        button {
+  background-color: white;
+  transition: background-color .5s;
+}
+
+button:hover {
+  background-color:black;
+  color:white;
+}
         .head{
            padding:1rem;
            color:whitesmoke;
